# Menova-SaaS

./: .dockerignore  .gitignore  README.md  docker-compose.yml  security_measures.md
backend/: .dockerignore  .env.example  Dockerfile  Procfile  README.md  check_db.py  main.py  pyproject.toml
backend/app/api/v1/: auth.py  deps.py  menu.py  orders.py  public.py  qr_code.py  restaurant.py  uploads.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: category.py  menu_item.py  order.py  restaurant.py  user.py
backend/app/schemas/: category.py  menu_item.py  order.py  restaurant.py  user.py
backend/app/services/: storage.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BrandingCard.tsx  CustomizationTabs.tsx  ErrorBoundary.tsx  LayoutCard.tsx  LivePreview.tsx  LocationModal.tsx  MenuLayoutManager.tsx  PaletteCard.tsx  ProtectedRoute.tsx  TemplateCard.tsx  TypographyCard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CartPage.tsx  Categories.tsx  CustomizationPage.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  MenuCustomization.tsx  MenuItemsPage.tsx  MenuPreview.tsx  OrdersPage.tsx  PublicMenu.tsx  QRCodePage.tsx  Register.tsx  SettingsPage.tsx
frontend/src/store/: useLikesStore.ts  useStore.ts
frontend/src/templates/: CleanCatering.tsx  DefaultTemplate.tsx  PremiumDark.tsx  TemplateEngine.ts  WarmRustic.tsx
frontend/src/types/: index.ts
(+5 files in other folders)
